# ytpls

./: .editorconfig  .gitignore  Cargo.toml  example.ini
config/: example.ini
src/: git.rs  main.rs  playlist.rs
